cmake_minimum_required(VERSION 4.1)
project(ASD)

set(CMAKE_CXX_STANDARD 14)

## MODULO 1
# Alberi in tutte le salse
add_executable(ASD Alberi/main.cpp)
# Ordinamenti
#add_executable(ASD Ordinamento/main.cpp)

## MODULO 2
# HashTable
#add_executable(ASD HashTable/hashTable.cpp)

# Dijkstra
#add_executable(ASD Dijkstra/main.cpp)
